// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Add /> renders correctly 1`] = `
<div
  className="ui container"
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <h1
    className="ui header"
    style={
      Object {
        "margin": "1.5rem 0",
      }
    }
  >
    Contacts Manager Demo
  </h1>
  <div
    className="ui tabular menu"
  >
    <div
      className="active item"
      onClick={[Function]}
    >
      <a
        href="/employees"
        onClick={[Function]}
      >
        Employees
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <a
        href="/settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
  </div>
  <div
    className="ui container"
  >
    <button
      className="ui right floated button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Back
    </button>
    <h3
      className="ui left floated header"
    >
      Employee Add
    </h3>
    <div
      className="ui clearing hidden divider"
    />
    <form
      action={undefined}
      className="ui form"
      disabled={undefined}
      onSubmit={[Function]}
    >
      <div
        className="ui stackable two column grid"
      >
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                First Name
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="firstName"
                  onChange={[Function]}
                  placeholder="First Name"
                  required={true}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                Last Name
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="lastName"
                  onChange={[Function]}
                  placeholder="Last Name"
                  required={true}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                Email
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="email"
                  onChange={[Function]}
                  placeholder="Email"
                  required={true}
                  tabIndex={undefined}
                  type="email"
                />
              </div>
            </div>
          </div>
          <div
            className="column"
          >
            <div
              className="field"
            >
              <label
                htmlFor={undefined}
              >
                Telephone
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="telephone"
                  onChange={[Function]}
                  placeholder="Telephone"
                  required={undefined}
                  tabIndex={undefined}
                  type="tel"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="field"
            >
              <label
                htmlFor={undefined}
              >
                Department
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="department"
                  onChange={[Function]}
                  placeholder="Department"
                  required={undefined}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <button
              className="ui button"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              tabIndex={undefined}
              type="submit"
            >
              Save
            </button>
             
            or
             
            <a
              href="/employees"
              onClick={[Function]}
            >
              Cancel
            </a>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Add /> renders correctly when loading 1`] = `
<div
  className="ui container"
  style={
    Object {
      "marginTop": "1rem",
    }
  }
>
  <h1
    className="ui header"
    style={
      Object {
        "margin": "1.5rem 0",
      }
    }
  >
    Contacts Manager Demo
  </h1>
  <div
    className="ui tabular menu"
  >
    <div
      className="active item"
      onClick={[Function]}
    >
      <a
        href="/employees"
        onClick={[Function]}
      >
        Employees
      </a>
    </div>
    <div
      className="item"
      onClick={[Function]}
    >
      <a
        href="/settings"
        onClick={[Function]}
      >
        Settings
      </a>
    </div>
  </div>
  <div
    className="ui container"
  >
    <button
      className="ui right floated button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Back
    </button>
    <h3
      className="ui left floated header"
    >
      Employee Add
    </h3>
    <div
      className="ui clearing hidden divider"
    />
    <form
      action={undefined}
      className="ui form"
      disabled={true}
      onSubmit={[Function]}
    >
      <div
        className="ui stackable two column grid"
      >
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                First Name
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="firstName"
                  onChange={[Function]}
                  placeholder="First Name"
                  required={true}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                Last Name
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="lastName"
                  onChange={[Function]}
                  placeholder="Last Name"
                  required={true}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="required field"
            >
              <label
                htmlFor={undefined}
              >
                Email
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="email"
                  onChange={[Function]}
                  placeholder="Email"
                  required={true}
                  tabIndex={undefined}
                  type="email"
                />
              </div>
            </div>
          </div>
          <div
            className="column"
          >
            <div
              className="field"
            >
              <label
                htmlFor={undefined}
              >
                Telephone
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="telephone"
                  onChange={[Function]}
                  placeholder="Telephone"
                  required={undefined}
                  tabIndex={undefined}
                  type="tel"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <div
              className="field"
            >
              <label
                htmlFor={undefined}
              >
                Department
              </label>
              <div
                className="ui input"
                content={undefined}
              >
                <input
                  defaultValue=""
                  disabled={undefined}
                  name="department"
                  onChange={[Function]}
                  placeholder="Department"
                  required={undefined}
                  tabIndex={undefined}
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="column"
          >
            <button
              className="ui loading button"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              tabIndex={undefined}
              type="submit"
            >
              Save
            </button>
             
            or
             
            <a
              href="/employees"
              onClick={[Function]}
            >
              Cancel
            </a>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
